manifests/04-deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"cluster-ninja:backend"},"fieldPath":"spec.template.spec.containers[?(@.name==\"cluster-ninja\")].image"}
      ]
  labels:
    app: cluster-ninja
    component: backend
  name: cluster-ninja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-ninja
      component: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cluster-ninja
        component: backend
    spec:
      containers:
        - image: ' '
          imagePullPolicy: Always
          name: cluster-ninja
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
