manifests/05-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: cluster-ninja
    component: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
