manifests/06-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: cluster-ninja
    component: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
