manifests/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ninja
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              number: 8080
        path: /api
        pathType: Prefix
