manifests/07-route-frontend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
spec:
  path: /
  to:
    kind: Service
    name: frontend
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
